fix style when messages overflow

--- a/front_end/public/styles.css
+++ b/front_end/public/styles.css
@@ -269,6 +269,7 @@
 .message-history ul {
   margin: 0px;
   padding: 0;
+  contain: size;
 }
 
 .message-history .message {
